syntax = "proto3";

package api.mapService;

option go_package = "map/api/mapService;mapService";

service MapService {
	rpc GetDrivingInfo (GetDrivingInfoReq) returns (GetDrivingReply);

}

message GetDrivingInfoReq {
	string origin = 1;
	string destionation = 2;
}
message GetDrivingReply {
	string origin = 1;
	string destionation = 2;
	string distance = 3;
	string duration = 4;
}

